--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* CSS */
+
+
+/* Add hover effect */
+.highlighted:hover {
+  border: 2px solid yellow;
+}
+
 .gender-image-container {
   display: flex;
   align-items: center;
@@ -212,4 +220,36 @@
   color: #fff; /* Change the text color */
   font-size: 16px; /* Change the font size */
   /* Add other CSS styles as needed */
+}
+/* style.css */
+
+/* Popup container */
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+/* Style for individual data fields within the popup */
+.popup p {
+  margin: 5px 0;
+}
+
+/* Style for buttons within the popup */
+.popup button {
+  margin: 5px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.popup button:hover {
+  background-color: #0056b3;
 }
